--- a/openomd_test/openomd_test.vcxproj.filters
+++ b/openomd_test/openomd_test.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\test\c\omdc.cpp">
+    <ClCompile Include="src\test\c\omdchandlertest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\test\c\omdd.cpp">
+    <ClCompile Include="src\test\c\omdcparsertest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\test\c\omddparsertest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -26,5 +29,10 @@
     <Xml Include="pom.xml">
       <Filter>Resource Files</Filter>
     </Xml>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\test\include\openomd\omdtest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
