--- a/openomd_handler/openomd_handler.vcxproj
+++ b/openomd_handler/openomd_handler.vcxproj
@@ -78,6 +78,9 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <PostBuildEvent>
+      <Command>..\copydll.bat $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -86,6 +89,9 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <PostBuildEvent>
+      <Command>..\copydll.bat $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -100,6 +106,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <PostBuildEvent>
+      <Command>..\copydll.bat $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -114,6 +123,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <PostBuildEvent>
+      <Command>..\copydll.bat $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\main\include\omdc_sbe\AddOddLotOrder.h" />
@@ -192,10 +204,12 @@
     <ClInclude Include="src\main\include\omdd_sbe\Trade.h" />
     <ClInclude Include="src\main\include\omdd_sbe\TradeAmendment.h" />
     <ClInclude Include="src\main\include\omdd_sbe\TradeStatistics.h" />
+    <ClInclude Include="src\main\include\openomd\ethernet.h" />
     <ClInclude Include="src\main\include\openomd\multicastutil.h" />
     <ClInclude Include="src\main\include\openomd\omdbaseparser.h" />
     <ClInclude Include="src\main\include\openomd\omdcparser.h" />
     <ClInclude Include="src\main\include\openomd\omddparser.h" />
+    <ClInclude Include="src\main\include\openomd\pcaputil.h" />
     <ClInclude Include="src\main\include\sbe\sbe.h" />
   </ItemGroup>
   <ItemGroup>
