--- a/openomd_handler/openomd_handler.vcxproj
+++ b/openomd_handler/openomd_handler.vcxproj
@@ -205,11 +205,15 @@
     <ClInclude Include="src\main\include\omdd_sbe\TradeAmendment.h" />
     <ClInclude Include="src\main\include\omdd_sbe\TradeStatistics.h" />
     <ClInclude Include="src\main\include\openomd\ethernet.h" />
+    <ClInclude Include="src\main\include\openomd\linearbitration.h" />
     <ClInclude Include="src\main\include\openomd\multicastutil.h" />
     <ClInclude Include="src\main\include\openomd\omdbaseparser.h" />
+    <ClInclude Include="src\main\include\openomd\omdcostream.h" />
     <ClInclude Include="src\main\include\openomd\omdcparser.h" />
+    <ClInclude Include="src\main\include\openomd\omddef.h" />
     <ClInclude Include="src\main\include\openomd\omddparser.h" />
     <ClInclude Include="src\main\include\openomd\pcaputil.h" />
+    <ClInclude Include="src\main\include\openomd\recoverypolicy.h" />
     <ClInclude Include="src\main\include\sbe\sbe.h" />
   </ItemGroup>
   <ItemGroup>
