--- a/openomd_handler/openomd_handler.vcxproj.filters
+++ b/openomd_handler/openomd_handler.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Header Files\net">
       <UniqueIdentifier>{62766c9d-68bc-4204-b657-c42c108113f8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\recovery">
+      <UniqueIdentifier>{d95f6c17-a3ad-4348-b7b6-756f8755fa13}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\main\include\openomd\omdbaseparser.h">
@@ -275,6 +278,18 @@
     </ClInclude>
     <ClInclude Include="src\main\include\openomd\ethernet.h">
       <Filter>Header Files\net</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\omdcostream.h">
+      <Filter>Header Files\parser</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\linearbitration.h">
+      <Filter>Header Files\recovery</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\omddef.h">
+      <Filter>Header Files\parser</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\recoverypolicy.h">
+      <Filter>Header Files\parser</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
