--- a/openomd_tools/pom.xml
+++ b/openomd_tools/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -8,8 +8,8 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>openomd_test</artifactId>
-  <name>openomd_test</name>
+  <artifactId>openomd_tools</artifactId>
+  <name>openomd_tools</name>
   <packaging>nar</packaging>
 
   <build>
@@ -25,17 +25,9 @@
           </cpp>
           <libraries>
             <library>
-              <type>static</type>
+              <type>executable</type>
             </library>
           </libraries>
-          <tests>
-            <test>
-              <name>gtest_main</name>
-              <args>
-                <arg>--gtest_output=xml</arg>
-              </args>
-            </test>
-          </tests>
         </configuration>
       </plugin>
     </plugins>
