--- a/openomd_handler/openomd_handler.vcxproj
+++ b/openomd_handler/openomd_handler.vcxproj
@@ -214,6 +214,7 @@
     <ClInclude Include="src\main\include\openomd\omddparser.h" />
     <ClInclude Include="src\main\include\openomd\pcaputil.h" />
     <ClInclude Include="src\main\include\openomd\recoverypolicy.h" />
+    <ClInclude Include="src\main\include\openomd\vectorbasedcache.h" />
     <ClInclude Include="src\main\include\sbe\sbe.h" />
   </ItemGroup>
   <ItemGroup>
