--- a/openomd_tools/openomd_tools.vcxproj
+++ b/openomd_tools/openomd_tools.vcxproj
@@ -103,7 +103,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -124,7 +124,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -149,7 +149,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -174,7 +174,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
