--- a/openomd_handler/openomd_handler.vcxproj
+++ b/openomd_handler/openomd_handler.vcxproj
@@ -212,7 +212,9 @@
     <ClInclude Include="src\main\include\openomd\omdcostream.h" />
     <ClInclude Include="src\main\include\openomd\omdcparser.h" />
     <ClInclude Include="src\main\include\openomd\omddef.h" />
+    <ClInclude Include="src\main\include\openomd\omddostream.h" />
     <ClInclude Include="src\main\include\openomd\omddparser.h" />
+    <ClInclude Include="src\main\include\openomd\orderbookdef.h" />
     <ClInclude Include="src\main\include\openomd\pcaputil.h" />
     <ClInclude Include="src\main\include\openomd\recoverypolicy.h" />
     <ClInclude Include="src\main\include\openomd\vectorbasedcache.h" />
