--- a/openomd_handler/openomd_handler.vcxproj.filters
+++ b/openomd_handler/openomd_handler.vcxproj.filters
@@ -300,6 +300,12 @@
     <ClInclude Include="src\main\include\openomd\fulltick.h">
       <Filter>Header Files\orderbook</Filter>
     </ClInclude>
+    <ClInclude Include="src\main\include\openomd\orderbookdef.h">
+      <Filter>Header Files\orderbook</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\omddostream.h">
+      <Filter>Header Files\parser</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\main\include\omdc_sbe\AggregateOrderBookUpdate.h.sbeomdhack">
