--- a/openomd_test/openomd_test.vcxproj.filters
+++ b/openomd_test/openomd_test.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\test\c\omddparsertest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\test\c\orderbooktest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="pom.xml">
