--- a/openomd_test/openomd_test.vcxproj
+++ b/openomd_test/openomd_test.vcxproj
@@ -101,7 +101,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;_DEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\test-nar\gmock-1.8.1-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(SolutionDir)\thirdparty\target\nar\include;$(ProjectDir)\target\test-nar\gmock-$(GmockVersion)-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
@@ -123,7 +123,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;_DEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\test-nar\gmock-1.8.1-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(SolutionDir)\thirdparty\target\nar\include;$(ProjectDir)\target\test-nar\gmock-$(GmockVersion)-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
@@ -147,7 +147,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;NDEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\test-nar\gmock-1.8.1-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(SolutionDir)\thirdparty\target\nar\include;$(ProjectDir)\target\test-nar\gmock-$(GmockVersion)-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
@@ -173,7 +173,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;NDEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\test-nar\gmock-1.8.1-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\test\include;$(SolutionDir)\openomd_handler\src\main\include;$(SolutionDir)\thirdparty\target\nar\include;$(ProjectDir)\target\test-nar\gmock-$(GmockVersion)-noarch\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
