--- a/openomd_handler/openomd_handler.vcxproj
+++ b/openomd_handler/openomd_handler.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="src\main\include\openomd\fulltick.h" />
     <ClInclude Include="src\main\include\openomd\linearbitration.h" />
     <ClInclude Include="src\main\include\openomd\multicastutil.h" />
+    <ClInclude Include="src\main\include\openomd\nooplinearbitration.h" />
     <ClInclude Include="src\main\include\openomd\omdbaseparser.h" />
     <ClInclude Include="src\main\include\openomd\omdcostream.h" />
     <ClInclude Include="src\main\include\openomd\omdcparser.h" />
@@ -217,7 +218,7 @@
     <ClInclude Include="src\main\include\openomd\orderbookdef.h" />
     <ClInclude Include="src\main\include\openomd\pcaputil.h" />
     <ClInclude Include="src\main\include\openomd\recoverypolicy.h" />
-    <ClInclude Include="src\main\include\openomd\vectorbasedcache.h" />
+    <ClInclude Include="src\main\include\openomd\msgcache.h" />
     <ClInclude Include="src\main\include\sbe\sbe.h" />
   </ItemGroup>
   <ItemGroup>
