--- a/openomd_tools/openomd_tools.vcxproj
+++ b/openomd_tools/openomd_tools.vcxproj
@@ -97,14 +97,14 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\src\main\include;$(ProjectDir)\target\nar\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared</AdditionalLibraryDirectories>
+      <AdditionalDependencies>boost_system-$(BoostVersion)d.lib;wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared;$(SolutionDir)\thirdparty\target\nar\lib\amd64-Windows-msvc\static</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -118,14 +118,14 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\src\main\include;$(ProjectDir)\target\nar\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared</AdditionalLibraryDirectories>
+      <AdditionalDependencies>boost_system-$(BoostVersion)d.lib;wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared;$(SolutionDir)\thirdparty\target\nar\lib\x86-Windows-msvc\static</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -141,7 +141,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\src\main\include;$(ProjectDir)\target\nar\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -149,8 +149,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared</AdditionalLibraryDirectories>
+      <AdditionalDependencies>boost_system-$(BoostVersion).lib;wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared;$(SolutionDir)\thirdparty\target\nar\lib\x86-Windows-msvc\static</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -166,7 +166,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\openomd_handler\src\main\include;$(ProjectDir)\src\main\include;$(ProjectDir)\target\nar\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -174,19 +174,19 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared</AdditionalLibraryDirectories>
+      <AdditionalDependencies>boost_system-$(BoostVersion).lib;wpcap-$(WpcapVersion).lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared;$(SolutionDir)\thirdparty\target\nar\lib\amd64-Windows-msvc\static</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Xml Include="pom.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main\c\omdprintprocessor.cpp" />
     <ClCompile Include="src\main\c\openomd_tools.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\main\c\omdprintprocessor.h" />
+    <ClInclude Include="src\main\include\multicastrunner.h" />
+    <ClInclude Include="src\main\include\pcaprunner.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
