--- a/openomd_tools/openomd_tools.vcxproj.filters
+++ b/openomd_tools/openomd_tools.vcxproj.filters
@@ -31,5 +31,8 @@
     <ClInclude Include="src\main\include\multicastrunner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\main\c\cxxopts.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
