--- a/openomd_tools/pom.xml
+++ b/openomd_tools/pom.xml
@@ -19,10 +19,19 @@
         <artifactId>nar-maven-plugin</artifactId>
         <configuration>
           <cpp>
-            <options>
-              <option>/Zc:__cplusplus</option>
-            </options>
+            <systemIncludePaths>
+              <systemIncludePath>${project.parent.basedir}/thirdparty/target/nar/include</systemIncludePath>
+            </systemIncludePaths>
           </cpp>
+          <linker>
+            <libs>
+              <lib><name>boost_system-${boost.version}</name><type>static</type><directory>../thirdparty/target/nar/lib/${nar.aol}/static</directory></lib>
+            </libs>
+            <sysLibs combine.children="append">
+              <sysLib><name>pcap</name></sysLib>
+              <sysLib><name>gomp</name></sysLib>
+            </sysLibs>
+          </linker>
           <libraries>
             <library>
               <type>executable</type>
