Use network configuration files

--- a/openomd_tools/openomd_tools.vcxproj.filters
+++ b/openomd_tools/openomd_tools.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="src\main\c\openomd_tools.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\main\c\channelconfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\main\include\pcaprunner.h">
@@ -32,6 +35,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\main\c\cxxopts.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\channelconfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
