--- a/openomd_tools/openomd_tools.vcxproj
+++ b/openomd_tools/openomd_tools.vcxproj
@@ -190,10 +190,12 @@
     <Xml Include="pom.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\main\c\channelconfig.cpp" />
     <ClCompile Include="src\main\c\openomd_tools.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\main\c\cxxopts.hpp" />
+    <ClInclude Include="src\main\include\channelconfig.h" />
     <ClInclude Include="src\main\include\multicastrunner.h" />
     <ClInclude Include="src\main\include\pcaprunner.h" />
   </ItemGroup>
