--- a/openomd_handler/openomd_handler.vcxproj
+++ b/openomd_handler/openomd_handler.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="src\main\include\openomd\ethernet.h" />
     <ClInclude Include="src\main\include\openomd\fulltick.h" />
     <ClInclude Include="src\main\include\openomd\instrumentprocessor.h" />
+    <ClInclude Include="src\main\include\openomd\multicastrunner.h" />
     <ClInclude Include="src\main\include\openomd\omdinstrumentdownload.h" />
     <ClInclude Include="src\main\include\openomd\linearbitration.h" />
     <ClInclude Include="src\main\include\openomd\multicastutil.h" />
@@ -221,6 +222,7 @@
     <ClInclude Include="src\main\include\openomd\omddparser.h" />
     <ClInclude Include="src\main\include\openomd\omddprocessor.h" />
     <ClInclude Include="src\main\include\openomd\orderbookdef.h" />
+    <ClInclude Include="src\main\include\openomd\pcaprunner.h" />
     <ClInclude Include="src\main\include\openomd\pcaputil.h" />
     <ClInclude Include="src\main\include\openomd\recoverypolicy.h" />
     <ClInclude Include="src\main\include\openomd\msgcache.h" />
