--- a/openomd_handler/openomd_handler.vcxproj.filters
+++ b/openomd_handler/openomd_handler.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClInclude Include="src\main\include\openomd\omddparser.h">
       <Filter>Header Files\parser</Filter>
     </ClInclude>
-    <ClInclude Include="src\main\include\sbe\sbe.h">
-      <Filter>Header Files\parser</Filter>
-    </ClInclude>
     <ClInclude Include="src\main\include\omdc_sbe\AddOddLotOrder.h">
       <Filter>Header Files\parser\omdc</Filter>
     </ClInclude>
@@ -321,9 +318,6 @@
     <ClInclude Include="src\main\include\openomd\channelconfig.h">
       <Filter>Header Files\net</Filter>
     </ClInclude>
-    <ClInclude Include="src\main\include\openomd\refreshprocessor.h">
-      <Filter>Header Files\parser</Filter>
-    </ClInclude>
     <ClInclude Include="src\main\include\openomd\instrumentprocessor.h">
       <Filter>Header Files\parser</Filter>
     </ClInclude>
@@ -332,6 +326,12 @@
     </ClInclude>
     <ClInclude Include="src\main\include\openomd\pcaprunner.h">
       <Filter>Header Files\net</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\sbe\sbe.h">
+      <Filter>Header Files\parser</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\refreshprocessor.h">
+      <Filter>Header Files\recovery</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
