--- a/openomd_handler/openomd_handler.vcxproj.filters
+++ b/openomd_handler/openomd_handler.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Header Files\orderbook">
       <UniqueIdentifier>{6c55533a-d4a7-494c-a751-729ec6c9057e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\parser\processor">
+      <UniqueIdentifier>{181e5194-b3fd-40e9-8412-ce4bcc51423b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\main\include\openomd\omdbaseparser.h">
@@ -306,20 +309,11 @@
     <ClInclude Include="src\main\include\openomd\recoverypolicy.h">
       <Filter>Header Files\recovery</Filter>
     </ClInclude>
-    <ClInclude Include="src\main\include\openomd\omdcprocessor.h">
-      <Filter>Header Files\parser</Filter>
-    </ClInclude>
-    <ClInclude Include="src\main\include\openomd\omddprocessor.h">
-      <Filter>Header Files\parser</Filter>
-    </ClInclude>
     <ClInclude Include="src\main\include\openomd\omdinstrumentdownload.h">
       <Filter>Header Files\parser</Filter>
     </ClInclude>
     <ClInclude Include="src\main\include\openomd\channelconfig.h">
       <Filter>Header Files\net</Filter>
-    </ClInclude>
-    <ClInclude Include="src\main\include\openomd\instrumentprocessor.h">
-      <Filter>Header Files\parser</Filter>
     </ClInclude>
     <ClInclude Include="src\main\include\openomd\multicastrunner.h">
       <Filter>Header Files\net</Filter>
@@ -332,6 +326,18 @@
     </ClInclude>
     <ClInclude Include="src\main\include\openomd\refreshprocessor.h">
       <Filter>Header Files\recovery</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\instrumentprocessor.h">
+      <Filter>Header Files\parser\processor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\omdcprocessor.h">
+      <Filter>Header Files\parser\processor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\omddprocessor.h">
+      <Filter>Header Files\parser\processor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\omdbaseprocessor.h">
+      <Filter>Header Files\parser\processor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
