--- a/openomd_tools/pom.xml
+++ b/openomd_tools/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.github.openvega</groupId>
     <artifactId>openomd</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.2</version>
   </parent>
 
   <artifactId>openomd_tools</artifactId>
