--- a/openomd_handler/openomd_handler.vcxproj.filters
+++ b/openomd_handler/openomd_handler.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClInclude Include="src\main\include\openomd\omdbaseprocessor.h">
       <Filter>Header Files\parser\processor</Filter>
     </ClInclude>
+    <ClInclude Include="src\main\include\openomd\compressionpolicy.h">
+      <Filter>Header Files\parser</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\main\include\omdc_sbe\AggregateOrderBookUpdate.h.sbeomdhack">
